StageParser Item 추가 부터 해야됨

--- a/OOP_Text_ShootingGame/OOP_Text_ShootingGame.vcxproj
+++ b/OOP_Text_ShootingGame/OOP_Text_ShootingGame.vcxproj
@@ -157,9 +157,11 @@
     <ClCompile Include="source\Game\Bullet.cpp" />
     <ClCompile Include="source\Game\Enemy.cpp" />
     <ClCompile Include="source\Game\GameInfo.cpp" />
+    <ClCompile Include="source\Game\Item.cpp" />
+    <ClCompile Include="source\ItemParser.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\Parser.cpp" />
-    <ClCompile Include="source\Stage.cpp" />
+    <ClCompile Include="source\Infos.cpp" />
     <ClCompile Include="source\Engine\GameBase.cpp" />
     <ClCompile Include="source\Engine\GlobalObjectManager.cpp" />
     <ClCompile Include="source\Engine\Input.cpp" />
@@ -189,8 +191,10 @@
     <ClInclude Include="source\Game\Bullet.h" />
     <ClInclude Include="source\Game\Enemy.h" />
     <ClInclude Include="source\Game\GameInfo.h" />
+    <ClInclude Include="source\Game\Item.h" />
+    <ClInclude Include="source\ItemParser.h" />
     <ClInclude Include="source\PatternList.h" />
-    <ClInclude Include="source\Stage.h" />
+    <ClInclude Include="source\Infos.h" />
     <ClInclude Include="source\Engine\GameBase.h" />
     <ClInclude Include="source\Engine\GlobalObjectManager.h" />
     <ClInclude Include="source\Engine\Input.h" />
